--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-<h1>M</h1>
+<h1>Course List</h1>
   <p>
-    Projects
+    Interactive Media
     <ul>
     	<li><a href="http://kaylynhill.github.io/interactivemedia323">323</a></li>
       <li><a href="http://kaylynhill.github.io/interactivemedia324">324</a></li>
